<resources>
    <string name="app_name">Helping Hand</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This Email Field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user__main">User_MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="elctrician">Electrician</string>
    <string name="cleaner">Cleaner</string>
    <string name="laptoprepairer">Laptop Repairer</string>
    <string name="plumber">Plumber</string>
    <string name="logout">LogOut</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search By Entering Location.</string>
    <string name="noaccount">No Account Yet? Create One.</string>
    <string name="gotologin">Already a member? Login!</string>
    <string name="google_maps_key">AIzaSyBgzXjiPJIlMu4w7XQCO6Dewzxo9hndf_E</string>
    <string name="title_activity_maps_for_user">Professiona\'s Location</string>
    <string name="bookingquestion">Are you Sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_abcabac">Map</string>
    <string name="title_activity_search_by_nearest">Map</string>

    <string name="title_activity_comments">Comments</string>
    <string name="action_comment">Comment</string>
    <string name="action_refresh">Reload</string>
    <string name="title_activity_setting_">Setting_Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
